Revision history for Graphics-Primitive

  - Remove various uses of sub { } for default that weren't necessary
  - Use Scene::Graph

0.48    December 24th, 2009
  - Add _draw_arc to Driver's require

0.47    December 24th, 2009
  - Use BUILD and triggers to handle Border's color & width in constructor
    and via setting width/color.

0.46    November 10th, 2009
  - Add JSON::Any dependency (Thanks NPW via RT)

0.45    October 2nd, 2009
  - Add antialias_mode, hint_style, hint_metrics and subpixel_order attributes
    to Font.

0.44
  - Fix typo in Canvas' hints attribute

0.43
  - README update

0.42
  - Reverting 0.41 (ha!)
  - Add width to insets, sets all insets in one call

0.41
  - Don't re-layout already laid out textboxes (might get reverted)

0.40
  - Fix some deprecated Moose stuff

0.39
  - POD fixes
  - Don't short-circuit TextBox prepare if there are lines or a layout.
  - If there's no layout, don't try and create one.  This breaks things.

0.38
  - Fix error in Component->outside_width

0.37
  - More POD fixes

0.36
  - POD fixes

0.35
  - Gradient: Break out into separate Line and Radial classes

0.34
  - Move pod tests to t/author

0.33
  - Driver: Don't mark things prepared, that's Layout::Manager's job
  - TextBox: simplify logic and return from prepare immediately after super if
    there is no text
  - TextBox: make some 'enumed' attributes plain Strings, since different
    drivers will have different values
  - Remove Text::Flow requirement

0.32
  - Fix POD typo (thanks Brian Cassidy)
  - TextBox: Don't resize during prepare unless it's new minimums are bigger
  - Fix TextLayout's POD (thanks Brian Cassidy)
  - Driver: add _draw_bezier to requires (thanks Budrica Petre Cosmin)

0.31
  - Fix POD typo (thanks Brian Cassidy)
  - Driver: Add _draw_circle and _draw_ellipse
  - Bump Deps
  - Revamp text handling, see Driver::TextLayout

0.30
  - Bump Forest dependency to 0.4 to ease Win32 problems

0.29
  - MooseX::Storage support