@@ -2,6 +2,8 @@ Revision history for Graphics-Primitive
 
   - Remove various uses of sub { } for default that weren't necessary
   - Use Scene::Graph
+  - Remove use of Moose in Graphics::Primitive package (not the whole thing, 
+    just that one package, since it has nothing in it)
 
 0.48    December 24th, 2009
   - Add _draw_arc to Driver's require
